<resources>
    <string name="app_name">Fab Calc</string>

    <!--==================================KEYS BEGIN========================================-->

    <!--Number Keys-->
    <string name="key_num_zero">0</string>
    <string name="key_num_one">1</string>
    <string name="key_num_two">2</string>
    <string name="key_num_three">3</string>
    <string name="key_num_four">4</string>
    <string name="key_num_five">5</string>
    <string name="key_num_six">6</string>
    <string name="key_num_seven">7</string>
    <string name="key_num_eight">8</string>
    <string name="key_num_nine">9</string>

    <!--Basic Keys-->
    <string name="key_plus">+</string>
    <string name="key_minus">-</string>
    <string name="key_divide">÷</string>
    <string name="key_multiply">x</string>
    <string name="key_equal">=</string>
    <string name="key_clear">C</string>
    <!--TODO: Replace backspace with % and add logic to use Clear button as backspace till one digit left-->
    <string name="key_percentage">%</string>
    <!--<string name="key_backspace">[X]</string>-->
    <!--<string name="key_backspace">&lt;X</string>-->
    <string name="key_point">.</string>
    <string name="key_paren_open">(</string>
    <string name="key_paren_close">)</string>

    <!--Advanced Keys-->
    <string name="key_degree">°</string>
    <string name="key_sin">sin</string>
    <string name="key_cos">cos</string>
    <string name="key_tan">tan</string>
    <string name="key_asin">asin</string>
    <string name="key_acos">acos</string>
    <string name="key_atan">atan</string>
    <string name="key_sqrt">√</string>
    <string name="key_square">^2</string>
    <string name="key_cube">^3</string>
    <string name="key_exponent">^</string>
    <string name="key_log_natural">ln</string>
    <string name="key_log_base_10">log</string>
    <string name="key_log_base_b">logb</string>
    <string name="key_euler">e</string>
    <string name="key_factorial">!</string>
    <string name="key_pi">π</string>

    <!--=====================================KEYS END========================================-->
    <!--=====================================================================================-->
    <!--==================================SETTINGS BEGIN=====================================-->

    <!--Degree Setting-->
    <string name="pref_degrees_key" translatable="false">use_degrees</string>
    <string name="pref_degrees_label">Angles in degrees</string>
    <string name="pref_degrees_true">Always</string>
    <string name="pref_degrees_false">When suffixed with °</string>

    <!--History Setting-->
    <string name="pref_history_key" translatable="false">enable_history</string>
    <string name="pref_history_label">History</string>
    <string name="pref_history_true">Enabled</string>
    <string name="pref_history_false">Disabled</string>

    <!--Theme Setting-->
    <string name="pref_theme_key">theme</string>
    <string name="pref_theme_black_and_white_key" translatable="false">theme_bnw</string>
    <string name="pref_theme_flat_key" translatable="false">theme_flat</string>
    <string name="pref_theme_image_key" translatable="false">theme_image</string>
    <string name="pref_theme_default_key" translatable="false">theme_default</string>
    <string name="pref_theme_customize_key" translatable="false">theme_customize</string>
    <string name="pref_theme_label">Theme</string>
    <string name="pref_theme_black_and_white_label">Black &amp; White</string>
    <string name="pref_theme_flat_label">Flat</string>
    <string name="pref_theme_image_label">Image</string>
    <string name="pref_theme_default_label">Default</string>
    <!--<string name="pref_theme_customize_label">Customize</string>-->
    <!--<string name="pref_theme_customize_summary">Click to customize selected theme</string>-->
    <!--<string name="pref_theme_customize_data">theme_data</string>-->

    <!--Color Settings-->
    <!--<string name="pref_color_label">Colors</string>-->
    <!--<string name="pref_color_summary">Click to change colors</string>-->
    <!--<string name="pref_color_data">color_data</string>-->
    <string name="pref_color_primary_key" translatable="false">primary_color</string>
    <string name="pref_color_secondary_key" translatable="false">secondary_color</string>
    <string name="pref_color_text_key" translatable="false">text_color</string>
    <string name="pref_color_keys_key" translatable="false">keys_color</string>
    <string name="pref_color_primary_label">Primary Color</string>
    <string name="pref_color_secondary_label">Secondary Color</string>
    <string name="pref_color_text_label">Text Color</string>
    <string name="pref_color_keys_label">Color Keys</string>
    <string name="pref_color_primary_summary">Used for keys background</string>
    <string name="pref_color_secondary_summary">Used for other Backgrounds</string>
    <string name="pref_color_text_summary">Used for text globally</string>
    <string name="pref_color_keys_true">Keys will be secondary color</string>
    <string name="pref_color_keys_false">Keys will be white</string>

    <!--====================================SETTINGS END=====================================-->
    <!--=====================================================================================-->
    <!--===============================BOTTOM BAR OPTIONS BEGIN==============================-->

    <!--Main Item Labels-->
    <string name="action_advanced">Advanced</string>
    <string name="action_basic">Basic</string>
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_calc">Calc</string>

    <!--Settings Item Labels-->
    <string name="action_general">General</string>
    <string name="action_theme">Theme</string>
    <string name="action_colors">Colors</string>

    <!--================================BOTTOM BAR OPTIONS END===============================-->

</resources>
