<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">
        <CheckBoxPreference
            android:defaultValue="@bool/pref_degrees_default"
            android:key="@string/pref_degrees_key"
            android:summaryOff="@string/pref_degrees_false"
            android:summaryOn="@string/pref_degrees_true"
            android:title="@string/pref_degrees_label" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="key_sound"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:title="Key Sounds"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="History">

        <CheckBoxPreference
            android:defaultValue="@bool/pref_history_default"
            android:key="@string/pref_history_key"
            android:summaryOff="@string/pref_history_false"
            android:summaryOn="@string/pref_history_true"
            android:title="@string/pref_history_label"
            android:widgetLayout="@xml/preference_switch_layout"/>
<!--TODO: define res-->
        <CheckBoxPreference android:key="store_invalid"
            android:dependency="@string/pref_history_key"
            android:defaultValue="false"
            android:title="Invalid Expressions"
            android:summaryOn="Included"
            android:summaryOff="Excluded"/>

        <CheckBoxPreference android:key="clear_on_exit"
            android:dependency="@string/pref_history_key"
            android:defaultValue="false"
            android:title="Clear on Exit"
            android:summaryOn="History will be cleared when you exit the app"
            android:summaryOff="History will be stored even if you exit app"/>

        <Preference android:key="clear_history"
            android:dependency="@string/pref_history_key"
            android:title="Clear"
            android:summary="Tap to clear all calculation history">
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>