<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/action_advanced"
        android:id="@+id/action_toggle"
        android:icon="@drawable/ic_flask_outline"
        android:orderInCategory="1"/>

    <item
        android:title="@string/action_history"
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:orderInCategory="99"/>

    <item
        android:title="@string/action_settings"
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"/>

    <!--<item-->
        <!--android:title="Test"-->
        <!--android:id="@+id/action_test"-->
        <!--android:icon="@mipmap/ic_launcher_round"-->
        <!--android:orderInCategory="101"/>-->
</menu>