<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_calc"
        android:title="@string/action_calc"
        android:icon="@drawable/ic_fabcalc_concise"
        android:orderInCategory="1"
        app:actionViewClass="android.widget.ImageButton"/>

    <item android:id="@+id/action_theme"
        android:title="@string/action_theme"
        android:icon="@drawable/ic_format_paint_black_24dp"
        android:orderInCategory="2"
        app:actionViewClass="android.widget.ImageButton"/>

    <item android:id="@+id/action_colors"
        android:title="@string/action_colors"
        android:icon="@drawable/ic_palette_black_24dp"
        android:orderInCategory="3"
        app:actionViewClass="android.widget.ImageButton"/>

</menu>