<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Theme">

        <ListPreference
            android:key="@string/pref_theme_key"
            android:title="@string/pref_theme_label"
            android:entries="@array/theme_labels"
            android:entryValues="@array/theme_keys"
            android:defaultValue="@string/pref_theme_default_key"/>

        <!--<Preference-->
            <!--android:title="@string/pref_theme_customize_label"-->
            <!--android:summary="@string/pref_theme_customize_summary">-->
            <!--<intent-->
                <!--android:action="android.intent.action.MAIN"-->
                <!--android:targetPackage="com.aksh.fabcalc"-->
                <!--android:targetClass="com.aksh.fabcalc.SettingsActivity"-->
                <!--android:data="@string/pref_theme_customize_data"/>-->
        <!--</Preference>-->

    </PreferenceCategory>
</PreferenceScreen>